Added the set up for drive encryption parameters
Modified 'vmm_config/drive.rs' to allow the API command for the block
device set up to include data encryption parameters; function
parse_drives_req() will return '501 Not Implemented' if we pass these
parameters in the API call.
