# api_server/swagger/firecracker.yaml
@@ -349,6 +349,33 @@ definitions:
         type: boolean
       rate_limiter:
         $ref: "#/definitions/RateLimiter"
+      encryption_description:
+        $ref: "#/definitions/EncryptionDescription"
+
+
+  EncryptionDescription:
+    type: object
+    required:
+      - iv
+      - key
+    description:
+      Defines a set of parameters used for encrypting and decrypting data
+    properties:
+      iv:
+        type: string
+        description:
+          Arbitrary number used in combination with a secret key for data encryption
+      key:
+        type: string
+        description: The key used for encryption
+      aad:
+        type: string
+        description: Optional additional authenticated data
+      algorithm:
+        type: string
+        description: The algorithm used for encryption
+        enum:
+          - AES256GCM
 
   Error:
     type: object
